--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -111,6 +111,8 @@
 <script src="//cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
 <script src="//cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
+<script type="text/javascript" src="{% static 'application/js/application.js' %}"></script>
+
 <script>
     let toggleTabs = function (selected_tab) {
         $('.nav-item').removeClass("active");
