--- a/application/templates/application/index.html
+++ b/application/templates/application/index.html
@@ -10,18 +10,15 @@
     <div class="all-app-root">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-6 left-pane">
+                <div class="col-md-12 left-pane">
                     {% block app_list %}
                         {% include 'application/application-list.html' %}
-                    {% endblock %}
-                </div>
-                <div class="col-md-6 right-pane">
-                    {% block app_overview %}
-                        {% include 'application/application-overview.html' %}
                     {% endblock %}
                 </div>
             </div>
         </div>
     </div>
+
+    <script type="text/javascript" src="{% static 'application/js/application.js' %}"></script>
 
 {% endblock %}
