--- a/admissions/templates/admissions/index.html
+++ b/admissions/templates/admissions/index.html
@@ -31,6 +31,7 @@
                 {% endif %}
             </div>
             {% for app in applications %}
+                {% if app.application_status == "pending" %}
                 <div class="card"
                      style="margin-top: 3em; margin-left: 17em; margin-right: 17em; background-color: #F9F7F3">
                     <div class="card-header" style="background-color: #CDE6EC"><b>
@@ -56,6 +57,59 @@
                         </div>
                     </div>
                 </div>
+                {% elif app.application_status == "accepted" %}
+                <div class="card"
+                     style="margin-top: 3em; margin-left: 17em; margin-right: 17em; background-color: #F9F7F3">
+                    <div class="card-header" style="background-color: success"><b>
+                        {{ app.first_name }} {{ app.last_name }}
+                        <span style="float: right">{{ app.application_number }}
+                    </span>
+                    </b>
+                    </div>
+                    <div class="card-body">
+                        <div class="card-text" style="align-items: center;">
+                            <span>
+                                Program: {{ app.program }}
+                            </span>
+                            <span style="float: right">
+                                <a href="{% url 'dashboard:admissions:detail' app.id %}"
+                                   class="btn btn-primary"
+                                >View Application</a>
+                            </span>
+                            <footer class="blockquote-footer"
+                                    style="margin-top:1em;">Date of Submission:
+                                {{ app.submitted_date }}
+                            </footer>
+                        </div>
+                    </div>
+                </div>
+                {% elif app.application_status == "rejected" %}
+                <div class="card"
+                     style="margin-top: 3em; margin-left: 17em; margin-right: 17em; background-color: #F9F7F3">
+                    <div class="card-header" style="background-color: red"><b>
+                        {{ app.first_name }} {{ app.last_name }}
+                        <span style="float: right">{{ app.application_number }}
+                    </span>
+                    </b>
+                    </div>
+                    <div class="card-body">
+                        <div class="card-text" style="align-items: center;">
+                            <span>
+                                Program: {{ app.program }}
+                            </span>
+                            <span style="float: right">
+                                <a href="{% url 'dashboard:admissions:detail' app.id %}"
+                                   class="btn btn-primary"
+                                >View Application</a>
+                            </span>
+                            <footer class="blockquote-footer"
+                                    style="margin-top:1em;">Date of Submission:
+                                {{ app.submitted_date }}
+                            </footer>
+                        </div>
+                    </div>
+                </div>
+                {% endif %}
             {% endfor %}
 
         {% else %}
