--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -47,10 +47,10 @@
                           data-url="#nav-selectedSchools" role="tab"
                           aria-controls="nav-selectedSchools">Selected Schools</span>
                     <span class="nav-item nav-link p-2" id="nav-applications-tab"
-                          data-toggle="tab" data-url="{% url 'dashboard:application:all_applications' 'ut_student' %}"
+                          data-toggle="tab" data-url="{% url 'dashboard:application:all_applications' %}"
                           role="tab" aria-controls="nav-applications">Application Forms</span>
                     <span class="nav-item nav-link p-2" id="nav-apply-tab"
-                          data-toggle="tab" data-url="{% url 'dashboard:application:new_application' 'ut_student' %}"
+                          data-toggle="tab" data-url="{% url 'dashboard:application:new_application' %}"
                           role="tab" aria-controls="nav-apply">Apply</span>
                     <span class="nav-item nav-link p-2" id="nav-recommendations-tab"
                           data-toggle="tab"
