tested flow, commented filter for admissions, updated register test cases for hs pk dbn

--- a/admissions/templates/admissions/index.html
+++ b/admissions/templates/admissions/index.html
@@ -11,7 +11,9 @@
         <p>{{ exception }}</p>
     {% else %}
         {% if applications %}
-            <div class="dropdown" style="text-align: right; line-height: 2.5"><b>Filter
+{#            todo - update this when program bug fixed for addmissions#}
+{#            fix - remove display: none; from style#}
+            <div class="dropdown" style="text-align: right; line-height: 2.5; display: none;"><b>Filter
                 by
                 Program:</b>
                 <a class="btn btn-secondary dropdown-toggle" href="#" role="button"
