--- a/high_school/templates/high_school/broken.html
+++ b/high_school/templates/high_school/broken.html
@@ -44,7 +44,7 @@
             <p class="mt-5" style="font-size: 18px;">
                 Oops! We couldn't find what you're looking for...
             </p>
-            <small class="pt-1">Contact oneapply_teamthree@gmail.com if the problem persists.</small>  #noaq: E501
+            <small class="pt-1">Contact oneapply_teamthree@gmail.com if the problem persists.</small>  {# noqa: E501 #}
             <a href="{% url 'dashboard:high_school:index' %}">
                 <button class="btn btn-lg btn-primary mt-4 mb-4">Home
                 </button>
