--- a/high_school/templates/high_school/school_list.html
+++ b/high_school/templates/high_school/school_list.html
@@ -2,7 +2,7 @@
     {% load hs_filters %}
     <div style="height: 90%; margin-bottom: 5%;">
         <div class="list-group">
-            <div style="display: flex; flex-direction: row; width: 100%;">
+            <div class="util-div" style="display: flex; flex-direction: row; width: 100%;">
                 <div class="high-school-search">
                     <form id="search_filter_form" name="search_filter_form" method='GET'>
                         <div class="search-div">
