--- a/static/high_schools/css/high_school.css
+++ b/static/high_schools/css/high_school.css
@@ -126,6 +126,27 @@ body {
     color: slategray;
     margin: 2% 0;
 }
+.program-div{
+    /*max-width: 40%;*/
+    margin: 10px 10px 10px 0;
+}
+.program-div .card-header{
+    display: flex;
+    flex-direction: row;
+    /* flex-flow: wrap; */
+}
+.program-div .card-header-left{
+    display: flex;
+    flex-direction: column;
+    flex-flow: wrap;
+    min-width: 50%;
+}
+.program-div .card-header-right{
+    display: flex;
+    flex-direction: column;
+    min-width: 50%;
+    align-items: flex-end;
+}
 /*overriding bootstrap*/
 .list-group-item {
     width: 85% !important;
