--- a/high_school/templates/high_school/school_overview.html
+++ b/high_school/templates/high_school/school_overview.html
@@ -27,37 +27,48 @@
                 <div>
                     {{ selected_school.overview_paragraph }}
                 </div>
-                <div style="display: flex; flex-direction: column; flex-flow: wrap;">
-                    {% for program in selected_school_programs %}
-                        <div class="card program-div" id="{{ program.code }}_container">
-
-                            <a class="" style="text-decoration: none !important;"
-                               data-toggle="collapse"
-                               href="#{{ program.code }}_collapse" role="button"
-                               aria-expanded="false"
-                               aria-controls="{{ program.code }}_collapse">
-                                <div class="card-header justify-content-between">
-                                    <div class="card-header-left justify-content-between">
-                                        <p class="mr-lg-5 mb-2"
-                                           style="text-decoration: none !important;">{{ program.name }}</p>
-                                        <span style="font-size: 14px;">{{ program.number_of_seats }} seats</span>
-                                    </div>
-                                    <div class="card-header-right" style="display: none">
-                                        <p class="mb-2" style="font-size: 16px;"><i
-                                                class="fa fa-chevron-up"></i></p>
-                                        <span>{{ program.offer_rate }} %</span>
-                                    </div>
-                                </div>
-                            </a>
-                            <div class="collapse" id="{{ program.code }}_collapse">
-                                <div class="card-body">
-                                    {{ program.description }}
-                                </div>
+                <div class="card text-white bg-primary program-div">
+                    <div class="card-header justify-content-between">
+                        <div style="display: flex; flex-direction: column;">
+                            <span class="mr-5" id="program-choose-header">Programs available ({{ selected_school_programs.count }})</span>
+                            <div class="mt-2 program-select-div" style="display: none;">
+                                <label>
+                                    <select class="form-control" id="program-select">
+                                        {% for program in selected_school_programs %}
+                                            <option value="{{ program.code }}">{{ program.name }}</option>
+                                        {% endfor %}
+                                    </select>
+                                </label>
                             </div>
                         </div>
-                    {% endfor %}
+                        <a class="" style="text-decoration: none !important;"
+                           data-toggle="collapse"
+                           href="#program_collapse" role="button"
+                           aria-expanded="false"
+                           aria-controls="program_collapse">
+                            <span class="ml-5" style="font-size: 18px;">
+                                <i id="program_toggle_icon" class="fa fa-plus-circle">
+                                </i>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="collapse" id="program_collapse">
+                        <div class="card-body card-text">
+                            {% for program in selected_school_programs %}
+                                <div class="program-desc-div" id="{{ program.code }}_div"
+                                     style="display: none;">
+                                    <div class="card-subtitle"
+                                         style="display: flex; flex-direction: column;">
+                                        <h5 class="mb-1">{{ program.name }}</h5>
+                                        <small class="mb-3">{{ program.number_of_seats }} seats</small>
+                                    </div>
+                                    <p class="mb-0">{{ program.description }}</p>
+                                </div>
+                            {% endfor %}
+                        </div>
+                    </div>
                 </div>
-                <button class="btn btn-lg btn-primary btn-block"
+                <button class="btn btn-lg btn-outline-primary btn-block"
                         style="margin: 15% 12.5% 5% 12.5%; width: 75%">More Info
                 </button>
             </div>
