--- a/high_school/templates/high_school/school_overview.html
+++ b/high_school/templates/high_school/school_overview.html
@@ -29,28 +29,35 @@
                 </div>
                 <div class="card text-white bg-primary program-div">
                     <div class="card-header justify-content-between">
-                        <div style="display: flex; flex-direction: column;">
-                            <span class="mr-5" id="program-choose-header">Programs available ({{ selected_school_programs.count }})</span>
-                            <div class="mt-2 program-select-div" style="display: none;">
-                                <label>
-                                    <select class="form-control" id="program-select">
-                                        {% for program in selected_school_programs %}
-                                            <option value="{{ program.code }}">{{ program.name }}</option>
-                                        {% endfor %}
-                                    </select>
-                                </label>
+                        {% if selected_school_programs %}
+                            <div style="display: flex; flex-direction: column;">
+                                <span class="mr-5" id="program-choose-header">
+                                    Programs available ({{ selected_school_programs.count }})
+                                </span>
+                                <div class="mt-2 program-select-div" style="display: none;">
+                                    <label>
+                                        <select class="form-control" id="program-select">
+                                            {% for program in selected_school_programs %}
+                                                <option value="{{ program.code }}">{{ program.name }}</option>
+                                            {% endfor %}
+                                        </select>
+                                    </label>
+                                </div>
+
                             </div>
-                        </div>
-                        <a class="" style="text-decoration: none !important;"
-                           data-toggle="collapse"
-                           href="#program_collapse" role="button"
-                           aria-expanded="false"
-                           aria-controls="program_collapse">
+                            <a class="" style="text-decoration: none !important;"
+                               data-toggle="collapse"
+                               href="#program_collapse" role="button"
+                               aria-expanded="false"
+                               aria-controls="program_collapse">
                             <span class="ml-5" style="font-size: 18px;">
                                 <i id="program_toggle_icon" class="fa fa-plus-circle">
                                 </i>
                             </span>
-                        </a>
+                            </a>
+                        {% else %}
+                            <span class="mr-5">No programs available</span>
+                        {% endif %}
                     </div>
                     <div class="collapse" id="program_collapse">
                         <div class="card-body card-text">
@@ -60,7 +67,11 @@
                                     <div class="card-subtitle"
                                          style="display: flex; flex-direction: column;">
                                         <h5 class="mb-1">{{ program.name }}</h5>
-                                        <small class="mb-3">{{ program.number_of_seats }} seats</small>
+                                        <span class="mb-3">
+                                             {% if program.number_of_seats %}
+                                                 {{ program.number_of_seats }} seats
+                                             {% endif %}</span>
+
                                     </div>
                                     <p class="mb-0">{{ program.description }}</p>
                                 </div>
