--- a/application/templates/application/application-list.html
+++ b/application/templates/application/application-list.html
@@ -1,5 +1,5 @@
 {% block app_list %}
-<div style="height: 90%; overflow-y: scroll; margin-bottom: 5%; ">
+<div style="height: 90%; margin-bottom: 5%; ">
     <div class="list-group" style="margin-top:10px;">
         {% if applications %}
             {% for app in applications %}
