--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -47,7 +47,7 @@
                           role="tab" aria-controls="nav-allSchools">All Schools</span>
                     <span class="nav-item nav-link p-2" id="nav-applications-tab"
                           data-toggle="tab" data-url="{% url 'dashboard:application:all_applications' %}"
-                          role="tab" aria-controls="nav-applications">Application Forms</span>
+                          role="tab" aria-controls="nav-applications">Applications</span>
                     <span class="nav-item nav-link p-2" id="nav-apply-tab"
                           data-toggle="tab" data-url="{% url 'dashboard:application:new_application' %}"
                           role="tab" aria-controls="nav-apply">Apply</span>
