--- a/application/templates/application/index.html
+++ b/application/templates/application/index.html
@@ -8,10 +8,16 @@
     <div class="all-app-root">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-12 left-pane">
-                    {% block app_list %}
-                        {% include 'application/application-list.html' %}
+                <div class="col-md-12 left-pane" style="overflow-y: scroll;">
+                    {% if selected_app %}
+                        {% block app_overview %}
+                            {% include 'application/application-overview.html' %}
+                        {% endblock %}
+                    {%  else %}
+                        {% block app_list %}
+                            {% include 'application/application-list.html' %}
                     {% endblock %}
+                {%  endif %}
                 </div>
             </div>
         </div>
