1. Add a school drop down to the registration page for admin staff to select his school 2. Add the drop down to include all the high schools from the database 3. Add an autofill type feature to shorten list based on the user's input 4. Updated test cases to reflect changes in the admin staff register form

--- a/register/templates/register/index.html
+++ b/register/templates/register/index.html
@@ -2,6 +2,8 @@
 <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'register/css/register.css' %}">
 
+{{ form.media.css }}
+
 <body>
 <div class="container-fluid">
     <div class="row">
@@ -90,11 +92,11 @@
                 {% elif user_type == constant_ut_adminStaff %}
                     {#                 school and supervisor's email block - Admission staff user #}
                     <div class="form-row">
-                        <div class="form-label-group col-md-6">
+                        <div class="col-md-6">
                             {{ form.school }}
-                            <label for={{ form.school.id_for_label }}>{{ form.school.label }}</label>
+                            <label class="mr-sm-2 sr-only form-label-group" for={{ form.school.id_for_label }}>{{ form.school.label }}</label>
                             {% if form.school.help_text %}
-                            <p class="help">{{ form.school.help_text|safe }}</p>
+                                <p class="help">{{ form.school.help_text|safe }}</p>
                             {% endif %}
                         </div>
                         <div class="form-label-group col-md-6">
@@ -131,3 +133,6 @@
 </div>
 
 </body>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+{{ form.media.js }}
