--- a/static/register/css/register.css
+++ b/static/register/css/register.css
@@ -144,3 +144,25 @@ body {
     text-align: center;
     border-radius: 3px;
 }
+
+.select2-selection.select2-selection--single {
+    height: 3.125rem !important;
+    padding: .75rem !important;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__arrow {
+    height: 26px;
+    position: absolute;
+    top: 12px !important;
+    right: 1px;
+    width: 20px;
+}
+
+.select2-container .select2-selection--single .select2-selection__rendered {
+    display: block;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
