--- a/static/high_schools/css/high_school.css
+++ b/static/high_schools/css/high_school.css
@@ -148,3 +148,12 @@ body {
 .list-group-item:last-child {
     margin-bottom: 5% !important;
 }
+.page-link {
+    background-color: #008067;
+}
+.page-item.disabled .page-link{
+    background-color: #4f9c8c;
+}
+.page-item.active .page-link{
+    background-color: #004f40;
+}
