minor changes to teacher recommendation tab

--- a/recommendation/templates/recommendation/index.html
+++ b/recommendation/templates/recommendation/index.html
@@ -12,7 +12,13 @@
                     {% block recommend_form %}
                         {% include 'recommendation/recommendation_form.html' %}
                     {% endblock %}
-
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 left-pane">
+                    {% block recommend_list %}
+                        {% include 'recommendation/recommendation_list.html' %}
+                    {% endblock %}
                 </div>
             </div>
         </div>
