--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -53,7 +53,8 @@
                           role="tab" aria-controls="nav-apply">Apply</span>
                     <span class="nav-item nav-link p-2" id="nav-recommendations-tab"
                           data-toggle="tab"
-                          data-url="{% url 'dashboard:recommendation:new_recommendation' %}" role="tab"
+                          data-url="{% url 'dashboard:recommendation:new_recommendation' %}"
+                          role="tab"
                           aria-controls="nav-recommendations">Teacher Recommendations</span>
                 </div>
             </nav>
@@ -87,6 +88,8 @@
             <div class="tab-pane fade" id="nav-recommendations" role="tabpanel"
                  aria-labelledby="nav-recommendations-tab">
                 {% block recommend_form %}
+                {% endblock %}
+                {% block recommend_list %}
                 {% endblock %}
             </div>
         </div>
