updated dropdown using select2

--- a/application/templates/application/application-form.html
+++ b/application/templates/application/application-form.html
@@ -3,6 +3,7 @@
 
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'application/css/application.css' %}">
+{{ form.media.css }}
 
 <div style="margin-left:20%; height: 90%; margin-bottom: 5%; width:50%; margin-top: 2%;">
     <h2>High School Application Form</h2>
@@ -107,7 +108,7 @@
         {% endif %}
         <div class="form-row">
             <div class="form-label-group col-md-6">
-                <label for={{ form.school.id_for_label }}>{{ form.school.label }}</label>
+                <label for={{ form.school.id_for_label }} style="width:320px;">{{ form.school.label }}</label>
                 {{ form.school }}
             </div>
             <div class="form-label-group col-md-6">
@@ -127,4 +128,7 @@
         </div>
     </form>
 </div>
+
+{{ form.media.js }}
+
 {% endblock %}
