--- a/application/templates/application/index.html
+++ b/application/templates/application/index.html
@@ -8,7 +8,7 @@
     <div class="all-app-root">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-12 left-pane" style="overflow-y: scroll;">
+                <div class="col-md-12 left-pane">
                     {% if selected_app %}
                         {% block app_overview %}
                             {% include 'application/application-overview.html' %}
