dropdown feature on dashboard

--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -28,9 +28,15 @@
 
                 </ul>
 
-                <a class="nav-link" href='#'>Profile</a>
-                <a class="nav-link" href="{% url 'dashboard:logout' %}">Logout</a>
-
+                <div class="dropdown">
+                    <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                     </button>
+                    <div class="dropdown-menu dropdown-menu-sm-right" aria-labelledby="dropdown03">
+                        <button class="dropdown-item">Profile</button>
+                        <button class="dropdown-item">Change Password</button>
+                        <button class="dropdown-item" href="{% url 'dashboard:logout' %}">Logout</button>
+                    </div>
+                </div>
             </div>
         </nav>
     </div>
