--- a/recommendation/templates/recommendation/recommendation_form.html
+++ b/recommendation/templates/recommendation/recommendation_form.html
@@ -38,6 +38,14 @@
             <div class="form-label-group col-md-6">
                 <input class="btn btn-lg btn-primary btn-block" type="submit" value="Submit" name="submit"/>
             </div>
+         </div>
+        <div class="form-row" style="margin-top:50px;">
+             {% if messages %}
+                {% for message in messages %}
+                     <h2 class="messages">{{ message }}</h2>
+                {% endfor %}
+            {% endif %}
+        </div>
     </form>
 </div>
 {% endblock %}
