--- a/static/high_schools/css/high_school.css
+++ b/static/high_schools/css/high_school.css
@@ -63,18 +63,27 @@ body {
     width: 100%;
 }
 
-.high-school-search {
-    margin: 2% 2.5% 0 7.5%;
-    width: 75%;
+.util-div{
+    display: flex;
+    flex-direction: column;
+    width: 85%;
+    margin: 2.5% 7.5% 0 7.5% !important;
 }
 
-.high-school-search .search-div {
+.hs-search-filters {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+
+.hs-search-filters .search-div {
     display: flex !important;
     flex-direction: column !important;
     position: relative !important;
+    width: 80%;
 }
 
-.high-school-search .search-div .search-input {
+.hs-search-filters .search-div .search-input {
     width: 100%;
     height: 36px;
     padding: 15px 20px;
@@ -83,12 +92,12 @@ body {
     border-radius: 12px;
 }
 
-.high-school-search .search-div .search-input:focus {
+.hs-search-filters .search-div .search-input:focus {
     outline: none !important;
     border: 2px solid slategray !important;
 }
 
-.high-school-search .search-div .search-btn {
+.hs-search-filters .search-div .search-btn {
     color: slategray;
     position: absolute;
     left: 95%;
@@ -96,14 +105,14 @@ body {
     cursor: pointer;
 }
 
-.high-school-filters{
-    margin: 2% 5% 0 0;
+.filters-div{
+    margin: 0 2.5% 0 4%;
     padding: 2px;
     display: flex;
     font-size: 20px;
 }
 
-.high-school-filters .filter-btn {
+.filters-div .filter-btn {
     color: slategray;
     cursor: pointer;
     padding: 0 10px;
@@ -111,12 +120,12 @@ body {
 
 .high-school-filter-div {
     display: none;
-    margin: 2% 0 0 0;
+    margin-top: 2%;
 }
-.high-school-filters .fav-btn{
+.filters-div .fav-btn{
     color: slategray;
     cursor: pointer;
-    padding: 0 10px;
+    padding-left: 20px;
 }
 .hide-fav{
     display: none;
@@ -138,6 +147,8 @@ body {
 .program-select-div .form-control:focus{
     box-shadow: none !important;
 }
+.hide { display: none; }
+
 /*overriding bootstrap*/
 .list-group-item {
     width: 85% !important;
